--- a/style.css
+++ b/style.css
@@ -9,12 +9,19 @@
 	font-size: 14pt;
 }
 
-#form {
+#form,
+#sort-form {
 	background: #c0c0c0;
 	border: 3px solid #000;
 	border-radius: 10px;
 	width: 500px;
 	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+#text-line {
+	font-size: 14pt;
+	text-align: center;
 }
 
 #text-input {
@@ -46,4 +53,13 @@
 	font-size: 16pt;
 	border: 0;
 	display: none;
+}
+
+li {
+	list-style-type: none;
+}
+
+a, p {
+	margin-left: 20px;
+	margin-right: 20px;
 }
